Added social media icons links
Co-authored-by: Thiago Mesquita <thiago099carvalho@gmail.com>

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,3 +1,14 @@
 .the-button {
     margin-left: 5em;
 }
+.space-icon {
+    padding-left: 4px;
+    padding-right: 4px;
+}
+.group-icons {
+    float: right;
+    margin-right: 1%;
+}
+.color-icons{
+    color: #46C242;
+}
