Added 'Diagnóstico Gratuito' button in the navbar.
Co-authored-by: Rossicler <rossiclerjr@gmail.com>

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,3 +15,7 @@
      background-image: url('../../assets/images/hamburguer.svg');
      background-size: 80%;
  }
+
+ .button-text {
+     font-weight: bold;
+ }
