fixing explaning cards

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -5,3 +5,9 @@
     display: flex;
     justify-content: center;
 }
+.explain-card-title {
+    color: white;
+}
+.explain-cards {
+    background-image: '../../assets/images/greenBack.svg';
+}
