--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -30,3 +30,17 @@ li ~ li {
 .navbar {
     z-index: 9999
 }
+
+.diagnostic-btn{
+    font-weight: bold; 
+    font-size: 20px;  
+    color: white !important;
+    background-color: #7aaf50;
+    border-color: transparent;
+    border: 0;
+    border-radius: 2.5px; 
+}
+
+.diagnostic-btn:active{
+    background-color: #4e783a;
+}
