--- a/src/components/background/background.css
+++ b/src/components/background/background.css
@@ -1,6 +1,6 @@
 .home-background {
     margin-top: 2%;
-    width: 95%;
+    width: 100%;
     position: relative;
     display: flex;
     align-items: center;
@@ -9,13 +9,28 @@
     z-index: 1;
 }
 
-.bg-image {
+.Colors {
     width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0%;
+    z-index: -1;
+    background-color: #18201b;
+}
+
+.White {
+    background-color: #efefef;
+    height: 30%;
+}
+
+
+.bg-image {
+    width: 95%;
 }
 
 .layer {
     position: absolute;
-    width: 100%;
+    width: 95%;
     top: 26%;
     z-index: 999;
     padding: 2%;
@@ -27,6 +42,6 @@
     position: absolute;
     width: 100%;
     top: 5%;
-    right: 0;
+    right: 3%;
     z-index: 999;
 }
