--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -1,8 +1,33 @@
-.card-title
+.benefits-cards .card-title
 {
-    color: green;
+    color: #7AAF50; 
+    font-weight: bold;
+    margin-top: 2em;
+    margin-bottom: 1em;
 }
 .card-body
 {
     text-align: center;
 }
+.benefits-cards{
+    background-color: #FCF8D9;
+}
+.icon-engage{
+    width: 6em;
+    position: absolute;
+    top: -3em;
+    left: -2em;
+  }
+.icon-motivation{
+    width: 6em;
+    position: absolute;
+    top: -3em;
+    left: -2em;
+   }
+   
+.icon-productivity{
+     width: 6em;
+     position: absolute;
+    top: -3em;
+    left: -2em;
+   }
