--- a/src/components/benefitsSection/benefitsSection.css
+++ b/src/components/benefitsSection/benefitsSection.css
@@ -8,9 +8,10 @@
 }
 
 .benefits-section + .benefits-end {
-    max-width: 100vw;
-    background-image: url('../../assets/images/section_end_green.png');
+    width: 100vw;
+    background-image: url('../../assets/images/section_end_green.svg');
     height: 208px; /* 200px é a altura da imagem*/
+    background-repeat: no-repeat;
 }
 
 .benefits-section h2 {
