fix card colors

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 .case {
-   background-color: black;
+   background-color: #18201b;
    margin: 30px 30px;
 }
 
