--- a/src/components/successCase/successCase.css
+++ b/src/components/successCase/successCase.css
@@ -5,7 +5,7 @@
    font-weight: bold;
    font-size: 2.15rem;
    margin: 30px 0 15px 0;
-   color: black;
+   color: #18201B;
 }
 
 .case-seemore {
