fix background resposivity

--- a/src/components/background/background.css
+++ b/src/components/background/background.css
@@ -1,6 +1,6 @@
 .home-background {
     margin-top: 2%;
-    width: 100%;
+    width: 120em;
     position: relative;
     display: flex;
     align-items: center;
