remove yellow outline from nav button

--- a/src/components/background/background.css
+++ b/src/components/background/background.css
@@ -49,3 +49,11 @@
 .logo {
     width: 100px;
 }
+
+.nav-item {
+    margin-left: 0;
+}
+
+.navbar-toggler:active, .navbar-toggler:focus {
+    outline: 0;
+}
